--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,8 @@
     <title>Меню Dota 2</title>
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="categories.js"></script>
+
 </head>
 <body>
 
