--- a/page3.html
+++ b/page3.html
@@ -32,7 +32,7 @@
     <div class="side-banner left-banner" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1')">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акция">
     </div>
-    <div class="side-banner right-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/?l=russian', '_blank')">
+    <div class="side-banner right-banner" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1')">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акция">
     </div>
 
@@ -44,3 +44,4 @@
 </body>
 
 </html>
+
