--- a/page3.html
+++ b/page3.html
@@ -29,10 +29,10 @@
         <button onclick="alert('Замовлення оформлено! Ваш кур\'єр уже в пути!')">Підтвердити замовлення</button>
     </div>
 
-    <div class="side-banner left-banner" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1')">
+    <div class="side-banner left-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/?l=russian', '_blank')">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акция">
     </div>
-    <div class="side-banner right-banner" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1')">
+    <div class="side-banner right-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/?l=russian', '_blank')">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акция">
     </div>
 
@@ -42,6 +42,4 @@
     </footer>
 
 </body>
-
 </html>
-
