--- a/page3.html
+++ b/page3.html
@@ -1,45 +1,64 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Оформление заказа</title>
+    <title>Оформлення замовлення</title>
     <link rel="stylesheet" href="style3.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
     <header class="checkout-header">
-        <a href="page2.html" class="back-link"><i class="fas fa-arrow-left"></i> Назад в Меню</a>
-        <h1><i class="fas fa-receipt"></i> Оформление заказа</h1>
+        <a href="page2.html" class="back-link"><i class="fas fa-arrow-left"></i> Назад до Магазину</a>
+        <h1><i class="fas fa-receipt"></i> Оформлення замовлення</h1>
     </header>
 
     <div class="form-box">
-        <h2>Данные для доставки</h2>
-        <input type="text" placeholder="Ваше ім'я та прізвище" required>
-        <input type="email" placeholder="Email" required>
-        <input type="tel" placeholder="Номер телефону" required>
-        <input type="text" placeholder="Адрес доставки (Город, улица, дом)" required>
+        <h2>Дані для доставки</h2>
+        <input type="text" id="userName" placeholder="Ваше ім'я та прізвище" required>
+        <input type="email" id="userEmail" placeholder="Email" required>
+        <input type="tel" id="userPhone" placeholder="Номер телефону" required>
+        <input type="text" id="userAddress" placeholder="Адреса доставки (Місто, відділення)" required>
         
         <h2>Оплата</h2>
-        <input type="text" placeholder="Номер картки (Visa/Mastercard)" required>
-        <input type="text" placeholder="Срок действия (ММ/ГГ)" style="width: 45%; margin-right: 5%;" required>
-        <input type="text" placeholder="CVV" style="width: 45%;" required>
+        <input type="text" id="cardNumber" placeholder="Номер картки (Visa/Mastercard)" required>
+        <div style="display: flex; justify-content: space-between; width: 90%; margin: 0 auto;">
+            <input type="text" id="cardDate" placeholder="ММ/РР" style="width: 48%;" required>
+            <input type="text" id="cardCVV" placeholder="CVV" style="width: 48%;" required>
+        </div>
 
-        <button onclick="alert('Замовлення оформлено! Ваш кур\'єр уже в пути!')">Підтвердити замовлення</button>
+        <button onclick="confirmOrder()">Підтвердити замовлення</button>
     </div>
 
-    <div class="side-banner left-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/?l=russian', '_blank')">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акция">
+    <div class="side-banner left-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/', '_blank')">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акція">
     </div>
-    <div class="side-banner right-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/?l=russian', '_blank')">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акция">
+    <div class="side-banner right-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/', '_blank')">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акція">
     </div>
 
     <footer>
         <p>© 2025 Golden Shop • Всі права не захищені)</p>
         <p class="small-text">Дякуємо за оформлення замовлення!</p>
     </footer>
+
+    <script>
+        function confirmOrder() {
+            // Перевірка чи заповнені всі поля
+            const name = document.getElementById('userName').value;
+            const card = document.getElementById('cardNumber').value;
+            const cvv = document.getElementById('cardCVV').value;
+
+            if(name && card && cvv) {
+                alert('Замовлення оформлено! Ваш кур\'єр уже в дорозі до вашої бази!');
+                localStorage.removeItem('dota2_cart'); // Очищаємо кошик після покупки
+                window.location.href = "index.html";
+            } else {
+                alert('Будь ласка, заповніть всі дані для оплати!');
+            }
+        }
+    </script>
 
 </body>
 </html>
