--- a/page3.html
+++ b/page3.html
@@ -31,10 +31,10 @@
         <button onclick="confirmOrder()">Підтвердити замовлення</button>
     </div>
 
-    <div class="side-banner left-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/', '_blank')">
+    <div class="side-banner left-banner" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1', '_blank')">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акція">
     </div>
-    <div class="side-banner right-banner" onclick="window.open('https://store.steampowered.com/app/570/Dota_2/', '_blank')">
+    <div class="side-banner right-banner" onclick="window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1', '_blank')">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt_vTUTyFdN7WdPAg3CKn9MCDtaw7ZmT0hjg&s" alt="Акція">
     </div>
 
@@ -61,4 +61,5 @@
     </script>
 
 </body>
+
 </html>
